corrected alignments

--- a/my-website/css/expt.css
+++ b/my-website/css/expt.css
@@ -470,7 +470,7 @@ transition-timing-function:cubic-bezier(0.51,-0.47, 0.27, 1.55);
 }
 @media screen and (max-width:400px){
     .li-blk li{
-        margin-top: 22%;
+        margin-top: 21%;
     }
 }
 @-o-viewport{
